--- a/myproject.html
+++ b/myproject.html
@@ -76,7 +76,7 @@
             <div class="form-group">
                 <label for="uploadImage">Upload Image</label>
                 <input type="file" id="uploadImage" accept="image/*">
-            </div>
+            <div class="button-input">
             <button type="submit" class="button-input">Submit</button>
         </form>
     </section>
